[gd_scene load_steps=9 format=3 uid="uid://ynceuumjxcqt"]

[ext_resource type="Script" path="res://main.gd" id="1_4q0ly"]
[ext_resource type="Texture2D" uid="uid://il8kepb2eaib" path="res://Assets/PNG/Main_Menu/Placeholder_background_menu.jpg" id="2_f1egt"]
[ext_resource type="FontFile" uid="uid://8kmd0di6vpnu" path="res://Assets/Fonts/BrookHolmes.otf" id="2_hq65p"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s00wt"]
texture = ExtResource("2_f1egt")
modulate_color = Color(0.47788, 0.47788, 0.47788, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lc7gn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7i0ap"]
bg_color = Color(0.537255, 0.454902, 0.352941, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkhbe"]
bg_color = Color(0.537492, 0.45529, 0.354617, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6h14"]
bg_color = Color(0.67552, 0.583569, 0.474825, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(1, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4q0ly")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_s00wt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -398.0
offset_top = -368.0
offset_right = 398.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3

[node name="New game" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_hq65p")
theme_override_font_sizes/font_size = 125
theme_override_styles/focus = SubResource("StyleBoxEmpty_lc7gn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7i0ap")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhbe")
theme_override_styles/normal = SubResource("StyleBoxFlat_k6h14")
text = "New Game"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_hq65p")
theme_override_font_sizes/font_size = 125
theme_override_styles/focus = SubResource("StyleBoxEmpty_lc7gn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7i0ap")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhbe")
theme_override_styles/normal = SubResource("StyleBoxFlat_k6h14")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_hq65p")
theme_override_font_sizes/font_size = 125
theme_override_styles/focus = SubResource("StyleBoxEmpty_lc7gn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7i0ap")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhbe")
theme_override_styles/normal = SubResource("StyleBoxFlat_k6h14")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/New game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
